<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#444">

    <ImageView
        android:id="@+id/passengerImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/app_logo" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passengerImageView"
        android:layout_toRightOf="@+id/passengerImageView"
        android:text="@string/app_name"
        android:textColor="#aaa"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/WandButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passengerImageView"
        android:layout_marginRight="55dp"
        android:layout_marginTop="75dp"
        android:layout_toLeftOf="@+id/ReviewButton"
        android:background="@null"
        android:src="@drawable/wand_button" />

    <ImageButton
        android:id="@+id/UploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ReviewButton"
        android:layout_marginLeft="55dp"
        android:layout_toRightOf="@+id/ReviewButton"
        android:background="@null"
        android:src="@drawable/upload_button" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/WandButton"
        android:layout_below="@+id/WandButton"
        android:text="@string/capture"
        android:textColor="#aaa" />

    <TextView
        android:id="@+id/totalPasssengerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/descriptionText"
        android:layout_alignBottom="@+id/descriptionText"
        android:layout_centerHorizontal="true"
        android:text="@string/review"
        android:textColor="#aaa" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/totalPasssengerCount"
        android:layout_alignBottom="@+id/totalPasssengerCount"
        android:layout_alignLeft="@+id/UploadButton"
        android:text="@string/upload"
        android:textColor="#aaa" />

    <TextView
        android:id="@+id/UnitIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text=""
        android:textColor="#aaa"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/ReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/WandButton"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:src="@drawable/review_button" />

    <TextView
        android:id="@+id/UserNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/UnitIdText"
        android:layout_alignRight="@+id/UnitIdText"
        android:text=""
        android:textColor="#aaa" />

</RelativeLayout>